--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -7,26 +7,26 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item {{ home }} px-2">
+            <li class="nav-item {{ home }} px-2 text-left">
                 <a class="nav-link navbar-items " href="{% url 'home' %}">
                     <i class="fa fa-home"></i>
                     Home
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
-            <li class="nav-item {{ media }} px-2">
+            <li class="nav-item {{ media }} px-2 text-left">
                 <a class="nav-link navbar-items " href="{% url 'album' %}">
                     <i class="fa fa-photo-video"></i>
                     Gallery
                 </a>
             </li>
-            <li class="nav-item {{ events }} px-2">
+            <li class="nav-item {{ events }} px-2 text-left">
                 <a class="nav-link navbar-items " href="{% url 'events' %}">
                     <i class="fa fa-calendar-alt"></i>
                     Events
                 </a>
             </li>
-            <li class="nav-item {{ shop }} px-2">
+            <li class="nav-item {{ shop }} px-2 text-left">
                 <a class="nav-link navbar-items " href="{% url 'shop' %}">
                     <i class="fa fa-store"></i>
                     Shop
@@ -34,7 +34,7 @@
             </li>
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item dropdown px-2">
+            <li class="nav-item dropdown px-2 text-left">
                 <a class="nav-link navbar-items" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-user"></i>
                     Profile
@@ -55,7 +55,7 @@
                 </div>
             </li>
 
-            <li class="nav-item pl-2 pr-4">
+            <li class="nav-item pl-2 pr-4 text-left">
                 <a class="nav-link navbar-items " href="{% url 'view_bag' %}">
                     <i class="fa fa-shopping-bag">
                         {% if grand_total %}
