--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,11 +3,11 @@
 <footer class="site-footer">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-6 text-left">
+            <div class="col-12 col-md-6 text-left">
                 <h6>About</h6>
                 <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, laborum delectus ipsam asperiores, culpa doloremque soluta quos repellendus esse vitae, rem cupiditate sequi ipsum quibusdam.</p>
             </div>
-            <div class="col-6 text-left text-md-right">
+            <div class="col-12 col-md-6 text-left text-md-right">
                 <h6>Contact</h6>
                 <ul class="footer-links">
                     <li><i class="fas fa-home mr-3"></i>Waddenweg 149,</li>
@@ -29,7 +29,6 @@
                 <ul class="social-icons">
                     <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
                     <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
                     <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
                     <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
