--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,45 +2,38 @@
 {% load static %}
 {% block content %}
 
-<div id="main" class="main-container">
-    <div id="intro" class="intro">
-        <div class="background-container">
-            <div class="wrapper-main">
-                <h1 class="name">GUILLERMO BRACHETTA</h1>
-            </div>
+
+<div class="container-fluid m-0 p-0">
+    <div class="row justify-content-center m-0">
+        <div class="col-12 text-center p-0">
+            <section class="panel red">
+                <img src="https://www.sgs.nl/-/media/global/images/structural-website-images/hero-images/hero-agri-forestry.jpg" alt="asd" />
+            </section>
         </div>
-    </div>
-    <div id="slide01" class="slide">
-        <div class="pin-wrapper">
-            <div class="img"></div>
-            <div class="row">
-                <div class="wrapper-musician col-6">
-                    <h1 class="musician">MUSICIAN</h1>
-                </div>
-                <div class="wrapper-musician-text col-6">
-                    <p>
-                        Lorem ipsum
-                    </p>
+
+        <section class="container-fluid m-0 p-0">
+            <div class="row justify-content-center m-0">
+                <div class="col-12 text-center p-0">
+                    <section class="panel orange">
+                        <img src="https://www.sgs.nl/-/media/global/images/structural-website-images/hero-images/hero-agri-forestry.jpg" alt="" />
+                    </section>
                 </div>
             </div>
-        </div>
-    </div>
-    <div id="slide02" class="slide">
-        <div class="pin-wrapper">
-            <div class="img-02"></div>
-            <div class="row">
-                <div class="wrapper-researcher col-6">
-                    <h1 class="researcher">RESEARCHER</h1>
-                </div>
-                <div class="wrapper-researcher-text col-6">
-                    <p>
-                        Lorem, ipsum
-                    </p>
+        </section>
+
+        <div class="container-fluid m-0 p-0">
+            <div class="row justify-content-center m-0">
+                <div class="col-12 text-center p-0">
+                    <section class="panel purple">
+                        <!-- <div class="overlay"></div> -->
+                        <img src="https://www.sgs.nl/-/media/global/images/structural-website-images/hero-images/hero-agri-forestry.jpg" alt="" />
+                    </section>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 {% endblock content %}
 {% block postjs %}
 {{ block.super }}
@@ -48,5 +41,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js" integrity="sha256-2p2tRZlPowp3P/04Pw2rqVCSbhyV/IB7ZEVUglrDS/c=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js" integrity="sha256-peenofh8a9TIqKdPKIeQE7mJvuwh+J0To7nslvpj1jI=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js" integrity="sha256-XBVALc3QsDSQiDtiaBwNZ2rxCJTHzlUhhlDQ84J8bw8=" crossorigin="anonymous"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/EaselPlugin.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/EasePack.min.js"></script>
+
 <script src="{% static 'home/js/home.js' %}"></script>
 {% endblock postjs %}
