--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -103,7 +103,7 @@
                 </div>
                 {% else %}
                 <p class="lead mb-5">Your bag is empty.</p>
-                <a href="{% url 'shop' %}" class="btn btn-outline-dark rounded-0 btn-lg mb-5">
+                <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 btn-lg mb-5">
                     <span class="icon">
                         <i class="fas fa-chevron-left"></i>
                     </span>
