--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col px-0">
                     {% if free_delivery_delta > 0 %}
-                    <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center">
+                    <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center border-secondary border-bottom">
                         Buy <strong>{{ free_delivery_delta }}</strong> more CD(s) to get free delivery!
                     </p>
                     {% endif %}
