--- a/events/templates/events/add_event.html
+++ b/events/templates/events/add_event.html
@@ -19,6 +19,7 @@
         <div class="col-12 col-md-6">
             <form method="POST" action="{% url 'add_event' %}" class="form mb-2">
                 {% csrf_token %}
+                {{ form.media }}
                 {{ form | crispy }}
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'events' %}">Cancel</a>
